@@ -4,6 +4,8 @@ VUZE CHANGELOG
 
 2008.0x.xx | Vuze 3.1.0.1
 
+FEATURE: Core | Added Auto Starting rule to seed large swarms first; useful when many overseeded torrents are in the queue or the upload capacity is far above average
+
 CHANGE: Core  | Built-in plugins can now be disabled - it didn't work properly in earlier versions [amc1]
 CHANGE: UI    | Create Vivaldi views for each DHT in use [Groundy]
 CHANGE: UI    | Added support for rotation in Vivaldi view [Groundy]
